# GB_Emulator

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cb.h  cb_instructions.h  cpu.h  cpu_debug.h  cpu_p.h  display.h  gpu.h  gpu_debug.h  input.h  instructions.h  interrupts.h  interrupts_p.h  memory.h  palette.h  registers.h  rom.h  timer.h  timer_p.h  utils.h
src/: cb.c  cpu.c  cpu_debug.c  display.c  gpu.c  gpu_debug.c  input.c  interrupts.c  main.c  memory.c  memory.h  palette.c  rom.c  timer.c  utils.c
tests/: CMakeLists.txt  cb_tests.cpp  cpu_tests.cpp  display_tests.cpp  input_tests.cpp  interrupts_tests.cpp  memory_tests.cpp  test_main.cpp  timer_tests.cpp
